# islands-kernel

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
bus/: app.py  dispatch.py  envelope.py  model.py  provisioning.py  schema_registry.py  service.py
capture_bridge/: bridge.py  classify.py  principal_map.py  route_caller.py  schema.py  translate.py
deploy/: .env.template  CHECKLIST.md  Caddyfile  README.md  SOAK.md  connector_dryrun.py  deploy.sh  dryrun.py  ecosystem.config.js  kernel.env.caputventi.example  nginx.conf.example  run-service.sh  schemas.json  soak.ecosystem.cjs  soak_boot.py  soak_provision.py
docs/: event-bus.md  kernel-integration.md  server-posture-vault.md
identity/: app.py  authorize.py  deps.py  exchange.py  jwt_issuer.py  jwt_verify.py  keys.py  model.py  resolve.py  service_principal.py  tokens.py
migration/: bookkeeping_adapter.md  cutover_runbook.md  research_adapter.md
scripts/: federation_provision.py  kernel_provision.py
tests/: conftest.py  node_bus_consumer.mjs  node_bus_publish.mjs  served_harness.py  test_access_log.py  test_access_service_manage_check.py  test_access_token.py  test_api.py  test_app_cred_ref.py  test_authed_endpoints.py  test_authorize.py  test_authorize_event_type.py  test_backend_parity.py  test_bookkeeping_adapter.py  test_bookkeeping_verify_path.py  test_bus_app.py  test_bus_authz.py  test_bus_cross_language.py  test_bus_lib_python.py  test_bus_posture_parity.py  test_bus_service.py  test_connect_oauth.py  test_connector_dryrun.py  test_cross_language.py  test_crypto.py  test_cutover_proof.py  (+59 more)
(+64 files in other folders)
