[project]
name = "islands-kernel-vault"
version = "0.1.0"
description = "Connector & credential vault — islands platform slice 1"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pynacl>=1.5",
    "httpx>=0.27",
    "PyJWT[crypto]>=2.8",
    "cryptography>=42",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
